# sparkboxHD

./: .clang_format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_sparkbox.py  workspace.code-workspace
STcube/: STcube.ioc
STcube/bootloader/: .mxproject  Makefile  STM32F407VGTx_FLASH.ld  bootloader.ioc
STcube/controller/: .mxproject  Makefile  (+1 more)
consoleStartup/: Makefile  STM32H743ZITX_FLASH.ld
device/: CMakeLists.txt  sparkbox_device.h
device/app/: CMakeLists.txt  main.cc
device/app/public/device/app/: application_driver.h
device/host/: CMakeLists.txt  host.cmake  sparkbox_device.cc
device/host/audio/: CMakeLists.txt  host_audio_driver.cc  host_audio_driver.h
device/host/controller/: CMakeLists.txt  host_controller_driver.cc  host_controller_driver.h
device/host/core/: CMakeLists.txt  host_core_driver.cc  host_core_driver.h
device/host/filesystem/: CMakeLists.txt  host_filesystem_driver.cc  host_filesystem_driver.h
device/host/unix/: CMakeLists.txt  FreeRTOSConfig.h  dynamic_loader.cc  dynamic_loader.h
device/host/video/: CMakeLists.txt
device/host/windows/: CMakeLists.txt  FreeRTOSConfig.h  dynamic_loader.cc  windows.cmake
device/nucleo_h743zi2/: CMakeLists.txt  FreeRTOSConfig.h  flash_sparkbox_os.py  nucleo_h743zi2.cmake  sparkbox_device.cc  sparkbox_device.h
device/nucleo_h743zi2/core/: CMakeLists.txt  clock.cc  core_driver.cc  interrupt.cc  pin.cc  stm32h7xx_hal_msp.c  stm32h7xx_hal_msp.cc  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c
device/nucleo_h743zi2/core/public/nucleo_h743zi2/core/: clock.h  core_defines.h  core_driver.h  interrupt.h  pin.h  stm32h7xx_it.h
device/nucleo_h743zi2/filesystem/: CMakeLists.txt  filesystem_driver.cc
device/nucleo_h743zi2/filesystem/public/nucleo_h743zi2/filesystem/: filesystem_driver.h
device/nucleo_h743zi2/public/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h
device/nucleo_h743zi2/public/nucleo_h743zi2/: controller_driver.h  filesystem_driver.h
device/posix/: CMakeLists.txt  FreeRTOSConfig.h  posix.cmake  posix_filesystem_driver.cc  posix_filesystem_driver.h  sparkbox_device.cc  sparkbox_device.h
device/shared/: CMakeLists.txt
device/shared/CMSIS/: CMakeLists.txt
device/shared/CMSIS/Device/: CMakeLists.txt
device/shared/CMSIS/Device/ST/: CMakeLists.txt
device/shared/CMSIS/Device/ST/STM32H7xx/: CMakeLists.txt
device/shared/ST/: CMakeLists.txt
device/shared/ST/STM32H7xx_HAL_Driver/: CMakeLists.txt
device/shared/ST/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
device/shared/host/: CMakeLists.txt  host_filesystem_driver.h
device/shared/host/audio/: CMakeLists.txt  host_audio_driver.cc  host_audio_driver.h
device/shared/host/controller/: CMakeLists.txt  host_controller_driver.cc  host_controller_driver.h
device/shared/host/core/: CMakeLists.txt  host_core_driver.cc  host_core_driver.h
device/shared/host/filesystem/: CMakeLists.txt  host_filesystem_driver.cc  host_filesystem_driver.h
device/unix/: CMakeLists.txt  filesystem_driver.h
device/windows/: CMakeLists.txt  FreeRTOSConfig.h  sparkbox_device.cc  sparkbox_device.h  windows.cmake
gpu/: alutiming.vwf  flashLoader.qsys  flashLoader.sopcinfo  lcdSim.vwf  lcdTester.v  lcdTester.vwf  lcd_tester_teal.map  pinTester.v  pipe_0_sim.vwf  pipe_1_sim.vwf  pipe_2_sim.vwf  pipe_5_fifosim.vwf  pipe_5_sim.vwf  sdramController_phy_autodetectedpins.tcl  sdramController_phy_summary.csv  sdramInterface.xml  sparkboxGPU.qpf  sparkboxGPU.qsf  sparkboxGPU.qws  sparkboxGPUtop.sv  sparkboxGPUtop.v  timingTester.v
gpu_sv/: gpu.qpf  gpu.qsf  gpu.qws  gpu_nativelink_simulation.rpt
level/: CMakeLists.txt
lib/: CMakeLists.txt
lib/sparkbox/: CMakeLists.txt  manager.cc  router.cc  sparkbox.cc  task.cc
lib/sparkbox/audio/: CMakeLists.txt  audio_file_importer.cc  audio_manager.cc  channel.cc  resampler.cc  stream.cc
lib/sparkbox/audio/internal/sparkbox/audio/: audio_channel.h  audio_file_importer.h  channel.h  imported_file.h  resampler.h
lib/sparkbox/audio/public/sparkbox/audio/: audio_channel.h  audio_driver.h  audio_file_importer.h  audio_manager.h  audio_manager_interface.h  channel.h  imported_file.h  resampler.h  stream.h
lib/sparkbox/controller/: CMakeLists.txt  controller_manager.cc
lib/sparkbox/controller/public/sparkbox/controller/: controller_driver.h  controller_manager.h  controller_manager_interface.h  controller_state.h
lib/sparkbox/core/: CMakeLists.txt  core_manager.cc  manager.cc
lib/sparkbox/core/internal/sparkbox/: manager.h  message.h
lib/sparkbox/core/public/sparkbox/: core_driver.h  level.h  log.h  status.h
lib/sparkbox/core/public/sparkbox/core/: core_driver.h  core_manager.h
lib/sparkbox/filesystem/: CMakeLists.txt  filesystem_manager.cc
lib/sparkbox/filesystem/public/sparkbox/filesystem/: filesystem_driver.h  filesystem_manager.h  filesystem_manager_interface.h
lib/sparkbox/level/: CMakeLists.txt
lib/sparkbox/level/example/: CMakeLists.txt
lib/sparkbox/level/os/: CMakeLists.txt  os.cc
lib/sparkbox/level/os/public/sparkbox/level/os/: os.h
lib/sparkbox/level/public/sparkbox/level/: level_interface.h  level_lib.h
lib/sparkbox/public/sparkbox/: assert.h  level.h  log.h  manager.h  message.h  router.h  sparkbox.h  sparkbox_interface.h  sparkbox_lib.h  status.h  task.h
os/: CMakeLists.txt  main.cc
schematic/: highlevel.txt
sparkbox/: CMakeLists.txt  error.h  sparkbox.h
sparkbox/audio/: CMakeLists.txt  audio_controller.cc  audio_controller.h
sparkbox/audio/public/sparkbox/audio/: audio_controller.h  audio_driver.h
sparkbox/controller/: CMakeLists.txt  controller_controller.cc
sparkbox/controller/public/sparkbox/controller/: controller_controller.h  controller_driver.h  controller_manager.h  controller_state.h
sparkbox/core/public/sparkbox/: log.h  status.h
sparkbox/filesystem/: CMakeLists.txt  filesystem_controller.cc  filesystem_controller.h  filesystem_driver.h  filesystem_manager.cc
sparkbox/filesystem/public/sparkbox/filesystem/: filesystem_controller.h  filesystem_driver.h  filesystem_manager.h
sparkbox/public/sparkbox/: sparkbox.h  status.h
(+579 files in other folders)
